[package]
name = "renko_rs"
version = "0.2.1"
edition = "2021"

[lib]
name = "renko_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
polars = { version = "0.54", features = ["dtype-datetime"] }
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-polars = "0.27"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "bench_renko"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
